--- a/style.css
+++ b/style.css
@@ -39,10 +39,56 @@ button {
     padding: 10px 20
 }
 
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
+}
+
+figure {
+    margin: 0;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s;
+}
+
+figure:hover {
+    transform: scale(1.05);
+}
+
+img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+figcaption {
+    text-align: center;
+    margin-top: 5px;
+}
+
+.image-info {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: none; /* Inicialmente escondido */
+}
+
 footer {
     text-align: center; 
     padding: 10px; 
     margin-top: 20px; 
     background-color: var(--header-background); 
     color: var(--text-color); 
+}
+
+@media (max-width: 600px) {
+    body {
+        font-size: 14px; 
+    }
+    main {
+        padding: 10px; 
+    }
 }
